--- a/app/src/main/res/layout/clue_layout.xml
+++ b/app/src/main/res/layout/clue_layout.xml
@@ -49,7 +49,7 @@
         app:layout_constraintStart_toEndOf="@id/btnBackspace"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <net.furrybrigade.ttwist.ToggleClueButton
         android:id="@+id/btnClue1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />
 
-    <Button
+    <net.furrybrigade.ttwist.ToggleClueButton
         android:id="@+id/btnClue2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toEndOf="@id/btnClue1"
         app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />
 
-    <Button
+    <net.furrybrigade.ttwist.ToggleClueButton
         android:id="@+id/btnClue3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
         app:layout_constraintStart_toEndOf="@id/btnClue2"
         app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />
 
-    <Button
+    <net.furrybrigade.ttwist.ToggleClueButton
         android:id="@+id/btnClue4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
         app:layout_constraintStart_toEndOf="@id/btnClue3"
         app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />
 
-    <Button
+    <net.furrybrigade.ttwist.ToggleClueButton
         android:id="@+id/btnClue5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -99,7 +99,7 @@
         app:layout_constraintStart_toEndOf="@id/btnClue4"
         app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />
 
-    <Button
+    <net.furrybrigade.ttwist.ToggleClueButton
         android:id="@+id/btnClue6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -109,7 +109,7 @@
         app:layout_constraintStart_toEndOf="@id/btnClue5"
         app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />
 
-    <Button
+    <net.furrybrigade.ttwist.ToggleClueButton
         android:id="@+id/btnClue7"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -119,7 +119,7 @@
         app:layout_constraintStart_toEndOf="@id/btnClue6"
         app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />
 
-    <Button
+    <net.furrybrigade.ttwist.ToggleClueButton
         android:id="@+id/btnClue8"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
