--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#3498db</color>
+    <color name="colorPrimaryDark">#2980b9</color>
+    <color name="colorAccent">#2ecc71</color>
+    <color name="colorBackground">#bdc3c7</color>
+
+    <color name="colorGuessedPrimary">#1abc9c</color>
+    <color name="colorGuessedPrimaryDark">#16a085</color>
 </resources>
