--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,24 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:buttonStyle">@style/pressableButton</item>
+        <item name="android:imageButtonStyle">@style/pressableImageButton</item>
     </style>
 
+    <style name="toggleButton" parent="android:Widget.Button.Toggle">
+        <item name="android:background">@drawable/toggle_button_states</item>
+    </style>
+
+    <style name="pressableButton" parent="android:Widget.Button">
+        <item name="android:background">@drawable/button_states</item>
+    </style>
+
+    <style name="pressableImageButton" parent="android:Widget.ImageButton">
+        <item name="android:background">@drawable/button_states</item>
+    </style>
+
+    <style name="pressableButton.Big" parent="pressableButton">
+        <item name="android:padding">5dp</item>
+        <item name="android:textSize">20sp</item>
+    </style>
 </resources>
