--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:buttonStyle">@style/pressableButton</item>
-        <item name="android:imageButtonStyle">@style/pressableImageButton</item>
+        <!-- Cannot apply imageButtonStyle globally, so this will be brought down to layouts-->
+        <!--<item name="android:imageButtonStyle">@style/pressableImageButton</item>-->
     </style>
 
     <style name="toggleButton" parent="android:Widget.Button.Toggle">
@@ -17,8 +18,8 @@
         <item name="android:background">@drawable/button_states</item>
     </style>
 
-    <style name="pressableImageButton" parent="android:Widget.ImageButton">
-        <item name="android:background">@drawable/button_states</item>
+    <style name="pressableImageButton" parent="pressableButton">
+        <item name="android:padding">5dp</item>
     </style>
 
     <style name="pressableButton.Big" parent="pressableButton">
